# shs_Lesson

./: README.md
OS_Leson/: OS_Leson.sln
OS_Leson/OS_Leson/: CMakeLists.txt  OS_Leson.cpp  OS_Leson.vcxproj  OS_Leson.vcxproj.filters  UIControler.cpp  UIControler.h
OS_Leson/OS_Leson/OS_Leson/x64/Debug/: OS_Leson.exe.recipe  vc143.idb
OS_Leson/OS_Leson/OS_Leson/x64/Debug/OS_Leson.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OS_Leson.lastbuildstate  link.secondary.1.tlog
OS_Leson/OS_Leson/glad/include/glad/: gl.h
OS_Leson/OS_Leson/imgui/glad/src/: gl.c
OS_Leson/OS_Leson/x64/Debug/: OS_Leson.exe.recipe  OS_Leson.ilk  vc143.idb
OS_Leson/OS_Leson/x64/Debug/OS_Leson.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OS_Leson.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
